--- a/script2.ipynb
+++ b/script2.ipynb
@@ -350,6 +350,67 @@
     "best_model = max(results, key=results.get)\n",
     "print(\"Meilleur modèle :\", best_model, \"avec une accuracy de\", results[best_model])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "764cb52d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data = pd.DataFrame([{\n",
+    "    'molecular_weight': 350.0,\n",
+    "    'logp': 3.2,\n",
+    "    'h_bond_donors': 2,\n",
+    "    'h_bond_acceptors': 6,\n",
+    "    'rotatable_bonds': 4,\n",
+    "    'polar_surface_area': 75.0,\n",
+    "    'compound_clogp': 2.9,\n",
+    "    'protein_length': 400,\n",
+    "    'protein_pi': 6.5,\n",
+    "    'hydrophobicity': 0.2,\n",
+    "    'binding_site_size': 120,\n",
+    "    'mw_ratio': 0.875,\n",
+    "    'logp_pi_interaction': 0.3,\n",
+    "    'binding_affinity': -8.5\n",
+    "}])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceef28bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prédiction : 0\n",
+      "Probabilités : [0.96 0.04]\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_model_instance = models[best_model]\n",
+    "\n",
+    "new_data_imputed = imputer.transform(new_data)\n",
+    "\n",
+    "if best_model in [\"SVM\", \"Logistic Regression\", \"KNN\"]:\n",
+    "    new_data_prepared = scaler.transform(new_data_imputed)\n",
+    "else:\n",
+    "    new_data_prepared = new_data_imputed\n",
+    "\n",
+    "prediction = best_model_instance.predict(new_data_prepared)\n",
+    "prediction_proba = None\n",
+    "\n",
+    "if hasattr(best_model_instance, \"predict_proba\"):\n",
+    "    prediction_proba = best_model_instance.predict_proba(new_data_prepared)\n",
+    "\n",
+    "print(\"Prédiction :\", prediction[0])\n",
+    "if prediction_proba is not None:\n",
+    "    print(\"Probabilités :\", prediction_proba[0])"
+   ]
   }
  ],
  "metadata": {
